/*
 * Copyright (C) 2015 vrebo
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
package org.itver.x.dao.jpa;

import org.itver.x.dao.ComentarioDAO;
import org.itver.x.dto.Comentario;

/**
 *
 * @author vrebo
 */
public class ComentarioJPAImpl extends GenericJPAImpl<Comentario, Integer> implements ComentarioDAO {

    public ComentarioJPAImpl() {
        super(Comentario.class);
    }
}
